--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@ html {
 }
 
 body {
+  float: absolute;
   margin: 0;
   padding: 0;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(#403075, #882D61);
+  background: linear-gradient(#00008B, #96aac9);
 }
 
 .piano {
@@ -74,4 +75,44 @@ body {
 
 .Eb5-key {
   left: 310px;
+}
+
+.Gb5-key {
+  left: 382px;
+}
+
+.Ab5-key {
+  left: 418px;
+}
+
+.Bb5-key {
+  left: 454px;
+}
+
+.Db6-key {
+  left: 526px;
+}
+
+.Eb6-key {
+  left: 562px;
+}
+
+
+
+#footer {
+	left: 30%;
+	width: 70%;
+	max-width: 70%;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	display: inline-block;
+}
+
+footer p {
+  text-align: center;
+  font-family: sans-serif;
+	font-size: 13px;
+	color: rgb(8, 7, 7);
+	margin-bottom: 20px;
 }
